--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "codeflask",
-  "version": "1.4.1",
+  "name": "@vastray/simple-code-editor",
+  "version": "1.4.2",
   "description": "A micro code-editor for awesome web pages",
   "main": "build/codeflask.min.js",
   "module": "build/codeflask.module.js",
@@ -45,7 +45,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kazzkiq/CodeFlask.git"
+    "url": "https://github.com/vastray/simple-code-editor.git"
   },
   "keywords": [
     "code-editor",
@@ -55,8 +55,8 @@
   ],
   "author": "Claudio Holanda",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/kazzkiq/CodeFlask/issues"
-  },
-  "homepage": "https://kazzkiq.github.io/CodeFlask/"
+  "homepage": "https://github.com/vastray/simple-code-editor",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/vastray"
+  }
 }
