--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vastray/simple-code-editor",
-  "version": "1.4.3",
+  "version": "1.4.4",
   "description": "A micro code-editor for awesome web pages",
   "main": "build/codeflask.min.js",
   "module": "build/codeflask.module.js",
@@ -13,12 +13,7 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "rollup -c",
-    "dev": "serve build & rollup -c -w",
-    "start": "serve public",
-    "pretest": "npm run build",
-    "test": "wdio test/wdio.conf.js",
-    "prepublishOnly": "npm install && npm run build"
+    "build": "rollup -c"
   },
   "dependencies": {
     "@types/prismjs": "^1.9.1",
@@ -26,22 +21,11 @@
     "prismjs": "^1.14.0"
   },
   "devDependencies": {
-    "@wdio/cli": "^6.1.15",
-    "@wdio/local-runner": "^6.1.14",
-    "@wdio/mocha-framework": "^6.1.14",
-    "@wdio/spec-reporter": "^6.1.14",
-    "@wdio/sync": "^6.1.14",
-    "chai": "^4.1.2",
-    "chromedriver": "^83.0.0",
-    "micro": "^9.3.0",
-    "mocha": "^5.1.1",
     "rollup": "^0.58.1",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.0.3",
-    "rollup-plugin-uglify": "^3.0.0",
-    "serve": "^7.0.0",
-    "wdio-chromedriver-service": "^6.0.3"
+    "rollup-plugin-uglify": "^3.0.0"
   },
   "repository": {
     "type": "git",
